fixes on mobile

--- a/src/components/pages/Contacts/Contacts.scss
+++ b/src/components/pages/Contacts/Contacts.scss
@@ -13,12 +13,25 @@
 }
 
 .Contacts_form {
-  margin-left: 0;
+  @media screen and(min-width: 650px) {
+    margin-left: 0;
+  }
+  @media screen and(max-width: 650px) {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 .Contacts_address {
   flex: 1 1 auto;
-  margin-right: 0;
+  @media screen and(min-width: 650px) {
+    margin-right: 0;
+  }
+
+  @media screen and(max-width: 650px) {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 .Contacts_form {
